[package]
name = "vifterpreter"
version = "0.1.0"
edition = "2021"
authors = ["SabeMP"]
license = "MIT"
description = "An interpreter for PS2 DMA Packets that will be sent to the VIF1"
repository = "https://github.com/SabeMP/vifterpreter"
keywords = ["PS2", "RE"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.13.3"
bilge = { git = "https://github.com/widberg/bilge.git", features = [ "serde" ] }
serde = { version = "1.0.194",  features = ["derive"] }
strum = { git = "https://github.com/SabeMP/strum.git", branch = "discriminant-enum-custom-attributes", features = ["derive"] }